# elasticsearch-agent-chainlit

./: pyproject.toml
elasticsearch_chainlit/ui/: agent_chainlit.py
